<resources>
    <string name="app_name">Messanger</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="register_text">Регистрация</string>
    <string name="register_button_text">Регистрация</string>
    <string name="email_hint">Email</string>
    <string name="login_text">Войти в аккаунт</string>
    <string name="auth_base_url">http://192.168.0.103:8080</string>
    <string name="chats_base_url">http://192.168.0.103:8081</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="sample_user_info">Био</string>
    <string name="privacy_checkbox_text">Приватный профиль</string>
    <string name="profile_image_desc">Изображение профиля</string>
    <string name="image_message">Image message</string>
</resources>

    <!--    http://192.168.213.110 192.168.65.110 192.168.0.103 10.0.2.2-->
